WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81975
DFG NodeFlags has some duplicate code and naming issues
https://bugs.webkit.org/show_bug.cgi?id=81975
Summary
DFG NodeFlags has some duplicate code and naming issues
Filip Pizlo
Reported
2012-03-22 15:05:42 PDT
The notion that some flags are "ArithNodeFlags" is mostly antiquated. The renaming from NodeUse to Edge messed up some node flags names (NodeUsedAsNum become EdgedAsNum ... ooops). It appears that we have a method called setArithNodeFlag() which is never called. It appears that we have both mergeArithNodeFlags and mergeFlags. The former has some assertions, which may be useful - but it's sad that we have two methods that really do the same thing.
Attachments
the patch
(17.90 KB, patch)
2012-03-22 15:35 PDT
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-03-22 15:35:22 PDT
Created
attachment 133368
[details]
the patch
Filip Pizlo
Comment 2
2012-03-22 16:25:46 PDT
Landed in
http://trac.webkit.org/changeset/111781
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug