DFG NodeFlags has some duplicate code and naming issues https://bugs.webkit.org/show_bug.cgi?id=81975

Reviewed by Gavin Barraclough.

Removed most references to "ArithNodeFlags" since those are now just part
of the node flags. Fixed some renaming goofs (EdgedAsNum is once again
NodeUsedAsNum). Got rid of setArithNodeFlags() and mergeArithNodeFlags()
because the former was never called and the latter did the same things as
mergeFlags().

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::makeSafe):
(JSC::DFG::ByteCodeParser::makeDivSafe):
(JSC::DFG::ByteCodeParser::handleIntrinsic):
* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::dump):
* dfg/DFGNode.h:
(JSC::DFG::Node::arithNodeFlags):
(Node):
* dfg/DFGNodeFlags.cpp:
(JSC::DFG::nodeFlagsAsString):
* dfg/DFGNodeFlags.h:
(DFG):
(JSC::DFG::nodeUsedAsNumber):
* dfg/DFGPredictionPropagationPhase.cpp:
(JSC::DFG::PredictionPropagationPhase::propagate):
(JSC::DFG::PredictionPropagationPhase::mergeDefaultArithFlags):



Canonical link: https://commits.webkit.org/99269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111781 268f45cc-cd09-0410-ab3c-d52691b4dbfc